# chatRoom

./: .gitignore
Client/: Client.pro  Client.pro.user.180dc62  Client.pro.user.a81f801  chatWidget.cpp  chatWidget.h  chatWidget.ui  main.cpp  protocol.h  tcpConnect.cpp  tcpConnect.h  userData.cpp  userData.h  widget.cpp  widget.h  widget.ui
Client/src/icons/: icons.qrc
Client/src/images/: images.qrc
Server/: CMakeLists.txt  main.cpp  run.sh
Server/epoll/: CMakeLists.txt  epollServer.cpp  epollServer.h
Server/msgProcess/: CMakeLists.txt  msgProcess.cpp  msgProcess.h  msgUtils.cpp  msgUtils.h
Server/mysqlPool/: CMakeLists.txt  mysqlPool.cpp  mysqlPool.h
Server/protocol/: CMakeLists.txt  protocol.h
Server/threadPool/: CMakeLists.txt  threadPool.cpp  threadPool.h
